feat: add signIn API
